--- a/.gitignore
+++ b/.gitignore
@@ -786,3 +786,4 @@ Assets/Extensions/ShaderForge/Example Scene.unity.meta
 Assets/Extensions/ShaderForge/Readme.txt
 Assets/Extensions/ShaderForge/Readme.txt.meta
 Assets/Extensions/ShaderForge.meta
+Assets/Asset_Library/Meshes/Foliage/SM_grassPlanes.obj.meta
